Fix product page title alignment, fix catalog cacheing

--- a/web/themes/custom/subtheme_videogame/src/components/node/_node--product.scss
+++ b/web/themes/custom/subtheme_videogame/src/components/node/_node--product.scss
@@ -3,7 +3,8 @@
 .product {
   &__title {
     position: relative;
-    left: 23rem;
+    display: table;
+    margin: 0 auto;
     top: 23rem;
     font-size: 3rem;
     color: $gray-500;
